--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blue">#12A2A2</color>
+    <color name="my_purple">#B373CA</color>
+    <color name="my_yellow">#F83B9D</color>
 </resources>
