--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,14 +1,143 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/white"
     tools:context=".DetailFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+<!--    <View-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="240dp"-->
+<!--        android:background="@drawable/rounded"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:shapeAppearanceOverlay="@style/rounded_corner" -->
+<!--        />-->
 
-</FrameLayout>
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/cover_2"
+        android:layout_width="match_parent"
+        android:layout_height="240dp"
+        android:scaleType="centerCrop"
+        app:srcCompat="@drawable/def"
+        android:alpha="0.4"
+        app:shapeAppearanceOverlay="@style/rounded_corner"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/cover"
+        android:layout_width="190dp"
+        android:layout_marginTop="24dp"
+        app:shapeAppearanceOverlay="@style/rounded_corner"
+        android:scaleType="centerCrop"
+        android:layout_height="190dp"
+        app:srcCompat="@drawable/def"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+    <TextView
+        android:id="@+id/name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/cover_2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="24dp"
+        android:text="Name song"
+        android:fontFamily="sans-serif-condensed-medium"
+        android:textColor="@color/black"
+        android:textSize="20dp"
+        />
+    <TextView
+        android:id="@+id/author"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/name"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="Song Author"
+        android:textSize="18dp" />
+
+
+    <HorizontalScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@id/author"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        >
+        <ScrollView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/author"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:gravity="center"
+                android:text="Девчата пляшут под спидами \n
+(Девчата пляшут под спидами),\n
+А ты стоишь как вкопанный\n
+(А ты стоишь как вкопанный).\n
+Кроссовками ломают пол\n
+(Кроссовками ломают пол).\n
+А ты стоишь как вкопанный.\n
+Ну что за мать его дерьмо?\n
+Я знаю, что ты хочешь,\n
+Ты хочешь танцевать.\n
+Ну-ну же, ну давай же,\n
+Ну-ну же, ну давай же.\n
+Я знаю, что ты знаешь этот трек,\n
+Готовься подпевать.\n
+Раз, два, три, четыре.\n
+Музыка громче, глаза закрыты\n
+Это! нон стоп! ночью открытий\n
+Делай, что хочешь я забываюсь\n
+Это! нон стоп! Не прекращаясь!\n
+Музыка громче, глаза закрыты\n
+Это! нон стоп! ночью открытий\n
+Буду с тобой самой примерною\n
+Утро в окне и мы будем первые!\n
+Этот трек делает тебя сильней\n
+Он прикольней, чем колеса\n
+И роднее, чем портвейн.\n
+Раза в три круче, чем самый первый секс-партнер.\n
+И все девчата в таком трипе,\n
+Что аж мама не горюй.\n
+Прыгай так, прыгай так\n
+Будто ты совсем дурак.\n
+Прыгай так, так и так и так, так\n
+Ты же воздух как никак.\n
+Прыгай так, прыгай так\n
+Будто ты чу покемон.\n
+Будто бы вся твоя жизнь\n
+Не такое уж дерьмо.\n
+Ну что за мать его дерьмо?\n
+Музыка громче, глаза закрыты\n
+Это! нон стоп! ночью открытий\n
+Делай, что хочешь я забываюсь\n
+Это! нон стоп! Не прекращаясь!\n
+Музыка громче, глаза закрыты\n
+Это! нон стоп! ночью открытий\n
+Буду с тобой самой примерною\n
+Утро в окне и мы будем первые!\n
+Я забываюсь, помоги мне.\n
+Я задыхаюсь, помоги мне.\n
+Делай, что хочешь я задыхааааюсь."
+                android:textSize="16dp"
+                />
+
+        </ScrollView>
+    </HorizontalScrollView>
+
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
