--- a/app/src/main/res/layout/item_song.xml
+++ b/app/src/main/res/layout/item_song.xml
@@ -6,10 +6,11 @@
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/cover"
         android:layout_width="90dp"
-        android:layout_margin="12dp"
+        android:layout_margin="8dp"
         app:shapeAppearanceOverlay="@style/rounded_corner"
         android:scaleType="centerCrop"
-        android:layout_height="90dp"
+        android:layout_height="102dp"
+        android:paddingBottom="8dp"
         app:srcCompat="@drawable/def"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
