--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -7,6 +7,7 @@
     tools:context=".ListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginTop="56dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/rv_songs"
