--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="first">#B3FFDC</color>
+    <color name="second">#FAD9B7</color>
+    <color name="third">#FFC0FD</color>
+    <color name="fourth">#B6BFFF</color>
+    <color name="fifth">#FFFEC4</color>
 </resources>
