--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -68,30 +68,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="
-            Пожалуйста, не умиpай\n
-            Или мне придётся тоже\n
-            Ты, конечно, сразу в рай\n
-            А я не думаю, что тоже\n
-            Хочешь сладких апельсинов?\n
-            Хочешь вслух рассказов длинных?\n
-            Хочешь, я взорву все звёзды\n
-            Что мешают спать?\n
-            Пожалуйста, только живи\n
-            Ты же видишь: я живу тобою\n
-            Моей огромной любви\n
-            Хватит нам двоим с головою\n
-            Хочешь в море с парусами?\n
-            Хочешь музык новых самых?\n
-            Хочешь, я убью соседей\n
-            Что мешают спать?\n
-            Хочешь солнце вместо лампы?\n
-            Хочешь за окошком Альпы?\n
-            Хочешь, я отдам все пeсни?\n
-            Про тебя отдам все пeсни\n
-            Хочешь солнце вместо лампы?\n
-            Хочешь за окошком Альпы?\n
-            Хочешь, я отдам все пeсни?\n
-            Про тебя отдам все пeсни я"
+           not added"
                 android:textSize="16sp"
                 />
         </androidx.core.widget.NestedScrollView>
